[gd_scene load_steps=7 format=3 uid="uid://dcvedc3qb3f8d"]

[ext_resource type="Texture2D" uid="uid://cnqs26yldrdjg" path="res://assets/synty/ui/Sprites/FantasyMenus/SPR_FantasyMenus_Menu_Button_11_Frame.png" id="1_7bn6t"]
[ext_resource type="Script" uid="uid://dat7lrjgrbqin" path="res://ui/btnatributos.gd" id="1_glsce"]
[ext_resource type="Theme" uid="uid://cpx2c60ubwk1w" path="res://ui/themes/MainTheme.tres" id="2_glsce"]
[ext_resource type="Texture2D" uid="uid://bmq3nlo5wkgk6" path="res://assets/synty/ui/Sprites/FantasyMenus/aaaaaaab.png" id="3_xoyik"]
[ext_resource type="Texture2D" uid="uid://du0rpa1ryjc5s" path="res://assets/synty/ui/Sprites/FantasyMenus/SPR_FantasyMenus_Frame_Box_Small_02.png" id="4_8m10h"]
[ext_resource type="Texture2D" uid="uid://djrxupjn66dcy" path="res://assets/synty/ui/Sprites/FantasyMenus/aaaaaaabb.png" id="5_8ra7e"]

[node name="GENERICATRIBUTE" type="HBoxContainer"]
theme = ExtResource("2_glsce")
script = ExtResource("1_glsce")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_7bn6t")
expand_mode = 1

[node name="ATRIBUTE" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.252
anchor_top = 0.233
anchor_right = 0.75
anchor_bottom = 0.867
offset_left = 0.199997
offset_top = 0.0199995
offset_right = -3.05176e-05
offset_bottom = -0.0200043
theme = ExtResource("2_glsce")
theme_override_font_sizes/font_size = 20
text = "DESTREZA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="less" type="Button" parent="."]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
icon = ExtResource("3_xoyik")
flat = true

[node name="TextureRect2" type="TextureRect" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("4_8m10h")
expand_mode = 1

[node name="Value" type="Label" parent="TextureRect2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.256
anchor_top = 0.187
anchor_right = 0.756
anchor_bottom = 0.812
offset_left = 0.0319996
offset_top = 0.0319996
offset_right = 0.032032
offset_bottom = 0.532001
theme = ExtResource("2_glsce")
theme_override_font_sizes/font_size = 33
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="more" type="Button" parent="."]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
icon = ExtResource("5_8ra7e")
flat = true

[connection signal="pressed" from="less" to="." method="_on_button_less_pressed"]
[connection signal="pressed" from="more" to="." method="_on_button_more_pressed"]
